fix: photo align center

--- a/projects.css
+++ b/projects.css
@@ -143,6 +143,10 @@ section {
     font-weight: 300;
 }
 
+.align-center img{
+  display: block;
+}
+
 
 
 
